# AI-traffic-analysis

./: .env.example  .gitattributes  .gitignore  README.md  TRAINING_DEPENDENCIES.md  loss.py  prepare_cesnet_benign.py  prepare_experiment_data.py  prepare_ppi_from_logs.py  pyproject.toml  smoke_cesnet_tls_year22.py  train_ai.py  项目对话交接记录.md
agent_reporter/: README.md  agent_audit.py  requirements-agent.txt
agent_reporter/knowledge/: security_playbook.jsonl
configs/env/: traffic_env.yaml
configs/reporting/: security_playbook.jsonl
configs/training/: README.md
docs/: agent_rag_wazuh.md  demo_jianli_walkthrough.md  interview_project_guide.md  mineshark_console.md  project_handoff.md  project_structure.md  reporting.md  system_flow_diagrams.html  system_flow_diagrams.md  training_dependencies.md
scripts/agent/: run_agent_audit.py  run_cli_agent_demo.sh  run_wsl_cli_agent_demo.ps1
scripts/data/: prepare_cesnet_benign.py  prepare_experiment_data.py  prepare_malware_ppi_from_logs.py  prepare_ppi_from_logs.py  smoke_cesnet_tls_year22.py
scripts/rag/: build_index.py
scripts/report/: generate_audit_report.py
scripts/train/: train_model.py
src/mineshark/: __init__.py  config.py
src/mineshark/agent/: __init__.py  cli.py  evidence.py  preflight.py  quality.py  toolbox.py
src/mineshark/data/: __init__.py  dataset.py  prepare_cesnet_benign.py  (+2 more)
tests/: test_agent_cli.py  test_agent_enhancements.py  test_ai_alerts.py  test_rag.py  test_sensors.py  test_wazuh.py  test_web_console.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
(+27 files in other folders)
