[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mineshark-traffic-analysis"
version = "0.1.0"
description = "MineShark encrypted traffic analysis and reporting toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.8.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "numpy>=1.24.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
cesnet = [
    "cesnet-datazoo>=0.1.15",
    "pandas>=2.0.0",
]

[project.scripts]
mineshark-train = "mineshark.training.train:cli"
mineshark-audit = "mineshark.reporting.agent_audit:main"
mineshark-agent-audit = "mineshark.agent.cli:main"
mineshark-build-rag = "mineshark.rag.build_index:main"
mineshark-prepare-ppi = "mineshark.data.prepare_ppi_from_logs:main"
mineshark-prepare-malware-ppi = "mineshark.data.prepare_malware_ppi_from_logs:main"
mineshark-prepare-experiments = "mineshark.data.prepare_experiment_data:main"
mineshark-export-cesnet = "mineshark.data.prepare_cesnet_benign:main"

[tool.setuptools.packages.find]
where = ["src"]
